DO NOT PUSH: add DEBUG and CRTDBG_MAP_ALLOC to KFW_FLAGS in win-pre.in
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/config/win-pre.in
+++ b/src/config/win-pre.in
@@ -125,7 +125,7 @@ DNSFLAGS=
 TIME_T_FLAGS=-D_USE_32BIT_TIME_T
 !endif
 
-KFWFLAGS=-DUSE_LEASH=1
+KFWFLAGS=-DUSE_LEASH=1 -DDEBUG -D_CRTDBG_MAP_ALLOC
 
 #
 # The name of the C compiler for the target
