Add defines for debug builds in win-pre.in
define DEBUG and _CRTDBG_MAP_ALLOC except for NODEBUG builds

Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/config/win-pre.in
+++ b/src/config/win-pre.in
@@ -125,7 +125,11 @@ DNSFLAGS=
 TIME_T_FLAGS=-D_USE_32BIT_TIME_T
 !endif
 
+!if defined (NODEBUG)
 KFWFLAGS=-DUSE_LEASH=1
+!else
+KFWFLAGS=-DUSE_LEASH=1 -DDEBUG -D_CRTDBG_MAP_ALLOC
+!endif
 
 #
 # The name of the C compiler for the target
