Update leash icon and button graphics
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/leash/Leash.rc
+++ b/src/windows/leash/Leash.rc
@@ -79,10 +79,10 @@ IDI_TICKETTYPE_NOTINSTALLED ICON                    "res\\Leash_tickets_out.ico"
 IDI_TICKET_GOOD         ICON                    "res\\Leash_tkt_green.ico"
 IDI_TICKET_LOW          ICON                    "res\\Leash_tkt_orange.ico"
 IDI_TICKET_EXPIRED      ICON                    "res\\Leash_tkt_red.ico"
-IDI_LEASH_TRAY_GOOD     ICON                    "res\\doghead_green.ico"
-IDI_LEASH_TRAY_LOW      ICON                    "res\\doghead_orange.ico"
-IDI_LEASH_TRAY_EXPIRED  ICON                    "res\\doghead_red.ico"
-IDI_LEASH_TRAY_NONE     ICON                    "res\\doghead_grey.ico"
+IDI_LEASH_TRAY_GOOD     ICON                    "res\\status_greenK.ico"
+IDI_LEASH_TRAY_LOW      ICON                    "res\\status_yelloK.ico"
+IDI_LEASH_TRAY_EXPIRED  ICON                    "res\\status_redK.ico"
+IDI_LEASH_TRAY_NONE     ICON                    "res\\status_grayK.ico"
 IDI_LEASH_TICKET_ADDRESS ICON                    "res\\address.ico"
 IDI_LEASH_TICKET_SESSION ICON                    "res\\key.ico"
 IDI_LEASH_TICKET_ENCRYPTION ICON                    "res\\encryption.ico"
