--- a/src/windows/leash/Leash.rc
+++ b/src/windows/leash/Leash.rc
@@ -201,10 +201,10 @@ BEGIN
     CONTROL         "",IDC_LEASH_MAINVIEW,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,0,43,347,88
 END
 
-IDD_LEASH_ABOUTBOX DIALOG 0, 0, 310, 146
+IDD_LEASH_ABOUTBOX DIALOGEX 0, 0, 310, 146
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "About Leash"
-FONT 8, "MS Sans Serif"
+CAPTION "About MIT Kerberos"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "Leash Modules",IDC_LEASH_MODULES,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,10,127,64,10
     CONTROL         "Missing Modules",IDC_NOT_LOADED_MODULES,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,77,127,68,10
