--- a/src/windows/leashdll/lsh_pwd.rc
+++ b/src/windows/leashdll/lsh_pwd.rc
@@ -104,6 +104,8 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,249,219,49,14
     PUSHBUTTON      "Hide Advanced",IDC_BUTTON_OPTIONS,146,219,89,14
     PUSHBUTTON      "Clear History",IDC_BUTTON_CLEAR_HISTORY,288,42,60,14
+    CONTROL         "Remember this principal", IDC_CHECK_REMEMBER_PRINCIPAL,
+                    "Button", BS_AUTOCHECKBOX | WS_TABSTOP,248,78,100,14
     CONTROL         "Ticket Lifetime",IDC_SLIDER_LIFETIME,"msctls_trackbar32",
                     TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,90,97,258,15
     CONTROL         "Forwardable and Proxiable (can be forwarded to other machines)",
