kfw: Help updates from Sofia
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/leash/htmlhelp/Makefile.in
+++ b/src/windows/leash/htmlhelp/Makefile.in
@@ -2,9 +2,9 @@ BUILDTOP=..\..\..
 
 TARGETTYPE=NONE
 
-HHCOUT=LeashHelp.chm
+HHCOUT=MITKerberosHelp.chm
 TARGET=..\$(OUTPRE)"MIT Kerberos.chm"
-HHP=LeashHelp.hhp
+HHP=MITKerberosHelp.hhp
 ERR=leash.log
 
 all:: $(HHCOUT)
