Use release MFC lib for NODEBUG builds
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/leash/Makefile.in
+++ b/src/windows/leash/Makefile.in
@@ -14,7 +14,11 @@ AFS_INCLUDES=
 AFS_LIBS=
 !endif
 
+!if defined(NODEBUG)
+MFCLIB=MFC100.LIB
+!else
 MFCLIB=MFC100D.LIB
+!endif
 EXE_NAME=leash
 WSHELPER=wshelp32
 
