Add domain_realm mappings to athena krb5.ini
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/installer/wix/athena/krb5.ini
+++ b/src/windows/installer/wix/athena/krb5.ini
@@ -1,3 +1,11 @@
 [libdefaults]
 	default_realm = ATHENA.MIT.EDU
 	allow_weak_crypto = true
+
+[domain_realm]
+	.mit.edu = ATHENA.MIT.EDU
+	mit.edu = ATHENA.MIT.EDU
+	.win.mit.edu = WIN.MIT.EDU
+	win.mit.edu = WIN.MIT.EDU
+	.csail.mit.edu = CSAIL.MIT.EDU
+	csail.mit.edu = CSAIL.MIT.EDU
